--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -3,6 +3,9 @@
     <a href={~p"/"}>
       <img src="/images/gist-logo.svg" alt="Logo" class="h-8 w-auto">
     </a>
+    <a href={~p"/"} class="mr-6">
+      <div class="text-white font-brand font-bold text-3xl">GistHub</div>
+    </a>
   </div>
 
 </header>
