--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -6,6 +6,15 @@
     <a href={~p"/"} class="mr-6">
       <div class="text-white font-brand font-bold text-3xl">GistHub</div>
     </a>
+    <div>
+      <input 
+        type="text" 
+        class="rounded-lg bg-ghDark-dark border-white px-3 py-1 mr-5
+          focus:outline-none focus:border-ghLavender focus:ring-0 
+          placeholder-ghDark-light text-white text-sm font-brand font-regular " 
+        placeholder="Search..."
+      />
+    </div>
   </div>
 
 </header>
