--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -17,5 +17,11 @@
       <button class="mt-2 mr-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light">All gists</button>
     </div>
   </div>
-
+  <div>
+    <div class="relative">
+      <button class="" type="button" id="user-menu-button">
+        <img src="/images/user-image.svg" alt="Profile Image" class="w-8 h-8">
+      </button>
+    </div>
+  </div>
 </header>
