--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -20,7 +20,7 @@
   <div>
     <div class="relative">
       <button class="" type="button" id="user-menu-button">
-        <img src="/images/user-image.svg" alt="Profile Image" class="w-8 h-8">
+        <img src="/images/user-image.svg" alt="Profile Image" class="round-image-padding w-8 h-8">
       </button>
     </div>
   </div>
