--- a/gist_hub/assets/css/app.css
+++ b/gist_hub/assets/css/app.css
@@ -21,3 +21,14 @@
     border: 1.5px solid #ffffff;
     padding: 4px;
 }
+
+.img-down-arrow::after {
+  content: "";
+  position: absolute;
+  right: -10px;
+  top: 45%;
+  transform: translateY(-50%);
+  border-width: 3px 3px 0 3px;
+  border-color: white transparent transparent transparent;
+  border-style: solid;  
+}
