--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -38,6 +38,16 @@
           >
           Sign in
           </.link>
+          <.link 
+          href={~p"/users/log_out"}
+          class=""
+          role="menuitem"
+          tabindex="-1"
+          method="get"
+          id="user-menu-item-1"
+          >
+          Register
+          </.link>
         <% end %> 
       </div>
     </div>
