Apply custom class to decorate menu items

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -30,7 +30,7 @@
         <% else %> 
           <.link 
           href={~p"/users/log_in"}
-          class=""
+          class="menu-item"
           role="menuitem"
           tabindex="-1"
           method="get"
@@ -40,7 +40,7 @@
           </.link>
           <.link 
           href={~p"/users/log_out"}
-          class=""
+          class="menu-item"
           role="menuitem"
           tabindex="-1"
           method="get"
