Add border between menu items

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -30,7 +30,7 @@
         <% else %> 
           <.link 
           href={~p"/users/log_in"}
-          class="menu-item"
+          class="menu-item border-b border-white border-opacity-50"
           role="menuitem"
           tabindex="-1"
           method="get"
@@ -39,7 +39,7 @@
           Sign in
           </.link>
           <.link 
-          href={~p"/users/log_out"}
+          href={~p"/users/register"}
           class="menu-item"
           role="menuitem"
           tabindex="-1"
