--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -26,7 +26,16 @@
         id="dropdown_menu"
         class="absolute right-0 mt-2 py-2 w-48 bg-ghDark rounded-lg shadow-xl border border-white">
         <%= if @current_user do %>  
+          <.link 
+          href={~p"/users/log_out"}
+          class="menu-item"
+          role="menuitem"
+          tabindex="-1"
+          method="delete"
+          id="user-menu-item-2"
+          >
           Sign out
+          </.link>
         <% else %> 
           <.link 
           href={~p"/users/log_in"}
