Place upwards arrow on dropdown menu

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -24,11 +24,11 @@
       </button>
       <div 
         id="dropdown_menu"
-        class="absolute right-0 mt-2 py-2 w-48 bg-ghDark rounded-lg shadow-xl border border-white">
+        class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-48 bg-ghDark rounded-lg shadow-xl border border-white">
         <%= if @current_user do %>  
           <.link 
           href={~p"/users/settings"}
-          class="menu-item  border-b border-white border-opacity-50"
+          class="menu-item border-b border-white border-opacity-50"
           role="menuitem"
           tabindex="-1"
           method="get"
