Toggle dropdown menu

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -19,7 +19,7 @@
   </div>
   <div>
     <div class="relative">
-      <button class="img-down-arrow" type="button" id="user-menu-button">
+      <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={GistHubWeb.Layouts.App.toggle_dropdown_menu()}>
         <img src="/images/user-image.svg" alt="Profile Image" class="round-image-padding w-8 h-8">
       </button>
       <div 
