--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -99,3 +99,17 @@
   <.flash_group flash={@flash}/>
   <%= @inner_content %>
 </main>
+<footer class="h-[120px] w-full flex justify-center text-white px-16 py-20 font-brand font-regular text-xs">
+  <div class="w-full px-10">
+    <div class="border-t-[1px] border-white"></div>
+    <div class="flex items-center space-x-2 py-6">
+      <img src="/images/em-logo.svg" alt="Gisthub Logo" class="h-8 w-8"/>
+      <p>© 2025 Kaizen Software LLC</p>
+      <div class="text-ghLavender-dark px-8 space-x-4">
+        <a href={~p"/"} class="hover:underline">Terms</a>
+        <a href={~p"/"} class="hover:underline">Privacy</a>
+        <a href={~p"/"} class="hover:underline">About</a>
+      </div>
+    </div>
+  </div>
+</footer>
