--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -1,5 +1,6 @@
 <div class="gh-gradient flex items-center justify-center">
     <h1 class="font-brand font-bold text-white text-3xl">
-        Instantly share Elixir code, notes and snippets
+        Instantly share Elixir code, notes and snippets.
     </h1>
 </div>
+
