--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -4,14 +4,23 @@
     </h1>
 </div>
 <.form for={@form}>
-    <div class="justify-center px-28 w-full space-y-4 mb-10">
-        <.input field={@form[:description]} placeholder="Gist Description..." autocomplete="off" />
-        <div>
-            <div class="flex items-center p-2 bg-ghDark rounded-t-md border">
-                <div class="w-[300px] mb-2">
-                    <.input field={@form[:name]} placeholder="Filename including extension..." autocomplete="off" />
-                </div>
-            </div>
+  <div class="justify-center px-28 w-full space-y-4 mb-10">
+    <.input field={@form[:description]} placeholder="Gist Description..." autocomplete="off" />
+    <div>
+      <div class="flex items-center p-2 bg-ghDark rounded-t-md border">
+        <div class="w-[300px] mb-2">
+          <.input field={@form[:name]} placeholder="Filename including extension..." autocomplete="off" />
         </div>
+      </div>
+      <.input 
+        type="textarea"
+        field={@form[:markup_text]}
+        class="textarea w-full rounded-b-md"
+        placeholder="Insert code..."
+        spellcheck="false"
+        autocomplete="off"
+        phx-debounce="blur"
+        />        
     </div>
+  </div>
 </.form>
