Add form fields for markup text to create gist form

--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -7,7 +7,7 @@
   <div class="justify-center px-28 w-full space-y-4 mb-10">
     <.input field={@form[:description]} placeholder="Gist Description..." autocomplete="off" />
     <div>
-      <div class="flex items-center p-2 bg-ghDark rounded-t-md border">
+      <div class="flex p-2 items-center bg-ghDark rounded-t-md border">
         <div class="w-[300px] mb-2">
           <.input field={@form[:name]} placeholder="Filename including extension..." autocomplete="off" />
         </div>
