Make only the bottom right corner of textarea input field rounded

--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -15,7 +15,7 @@
       <.input 
         type="textarea"
         field={@form[:markup_text]}
-        class="textarea w-full rounded-b-md"
+        class="textarea w-full rounded-br-md"
         placeholder="Insert code..."
         spellcheck="false"
         autocomplete="off"
