--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -3,7 +3,7 @@
         Instantly share Elixir code, notes and snippets.
     </h1>
 </div>
-<.form for={@form}>
+<.form for={@form} phx-submit="create">
   <div class="justify-center px-28 w-full space-y-4 mb-10">
     <.input field={@form[:description]} placeholder="Gist Description..." autocomplete="off" />
     <div>
@@ -24,7 +24,6 @@
     </div>
     <div class="flex justify-end">
         <.button class="create_button">Create gist</.button>
-            
     </div>
   </div>
 </.form>
