--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -12,7 +12,11 @@
           <.input field={@form[:name]} placeholder="Filename including extension..." autocomplete="off" phx-debounce="blur" />
         </div>
       </div>
-      <.input 
+      <div class="flex w-full">
+        <textarea class="line-numbers rounded-bl-md" id="line-numbers" readonly>
+            <%= "1\n" %>
+        </textarea>
+        <.input 
         type="textarea"
         field={@form[:markup_text]}
         class="textarea w-full rounded-br-md"
@@ -20,7 +24,10 @@
         spellcheck="false"
         autocomplete="off"
         phx-debounce="blur"
-        />        
+        />
+      </div>
+
+        
     </div>
     <div class="flex justify-end">
         <.button class="create_button" phx-disable-with="Creating...">Create gist</.button>
