--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -5,11 +5,21 @@
 </div>
 <.form for={@form} phx-submit="create" phx-change="validate">
   <div class="justify-center px-28 w-full space-y-4 mb-10">
-    <.input field={@form[:description]} placeholder="Gist Description..." autocomplete="off" phx-debounce="blur" />
+    <.input 
+      field={@form[:description]} 
+      placeholder="Gist Description..." 
+      autocomplete="off" 
+      phx-debounce="blur"
+    />
     <div>
       <div class="flex p-2 items-center bg-ghDark rounded-t-md border">
         <div class="w-[300px] mb-2">
-          <.input field={@form[:name]} placeholder="Filename including extension..." autocomplete="off" phx-debounce="blur" />
+          <.input 
+            field={@form[:name]} 
+            placeholder="Filename including extension..." 
+            autocomplete="off" 
+            phx-debounce="blur" 
+        />
         </div>
       </div>
       <div class="flex w-full">
@@ -25,9 +35,7 @@
         autocomplete="off"
         phx-debounce="blur"
         />
-      </div>
-
-        
+      </div>  
     </div>
     <div class="flex justify-end">
         <.button class="create_button" phx-disable-with="Creating...">Create gist</.button>
