--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -26,15 +26,17 @@
         <textarea class="line-numbers rounded-bl-md" id="line-numbers" readonly>
             <%= "1\n" %>
         </textarea>
-        <.input 
-        type="textarea"
-        field={@form[:markup_text]}
-        class="textarea w-full rounded-br-md"
-        placeholder="Insert code..."
-        spellcheck="false"
-        autocomplete="off"
-        phx-debounce="blur"
-        />
+        <div class="flex-grow">
+          <.input 
+          type="textarea"
+          field={@form[:markup_text]}
+          class="textarea w-full rounded-br-md"
+          placeholder="Insert code..."
+          spellcheck="false"
+          autocomplete="off"
+          phx-debounce="blur"
+          />
+        </div>
       </div>  
     </div>
     <div class="flex justify-end">
