--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -23,9 +23,7 @@
         </div>
       </div>
       <div class="flex w-full">
-        <textarea class="line-numbers rounded-bl-md" id="line-numbers" readonly>
-            <%= "1\n" %>
-        </textarea>
+        <textarea class="line-numbers rounded-bl-md" id="line-numbers" readonly><%= "1\n" %></textarea>
         <div class="flex-grow">
           <.input 
           type="textarea"
