Update line number for each line of input in textarea using Javascript hooks and event listeners

--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -28,6 +28,8 @@
           <.input 
           type="textarea"
           field={@form[:markup_text]}
+          id="gist-textarea"
+          phx-hook="UpdateLineNumbers"
           class="textarea w-full rounded-br-md"
           placeholder="Insert code..."
           spellcheck="false"
