Keep line numbers after change of focus to different field

--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -22,7 +22,7 @@
         />
         </div>
       </div>
-      <div class="flex w-full">
+      <div id="gist-wrapper" class="flex w-full" phx-update="ignore">
         <textarea class="line-numbers rounded-bl-md" id="line-numbers" readonly><%= "1\n" %></textarea>
         <div class="flex-grow">
           <.input 
