--- a/gist_hub/lib/gist_hub_web/components/layouts/root.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/root.html.heex
@@ -10,6 +10,10 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github-dark.css"
+    />
   </head>
   <body class="bg-ghDark-dark">
     {@inner_content}
