Add tags required for highlight.js hooks

--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -1,3 +1,7 @@
 <div class="bg-white">
-    <%= @gist.markup_text %>
+    <pre>
+        <code class="language-elixir">
+            <%= @gist.markup_text %>
+        </code>
+    </pre>
 </div>
