Add JS hook to format elixir code with proper syntax

--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -1,4 +1,4 @@
-<div class="bg-white">
+<div id="highlight" phx-hook="Highlight">
     <pre>
         <code class="language-elixir">
             <%= @gist.markup_text %>
