Add some css to code block

--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -1,6 +1,6 @@
-<div id="highlight" phx-hook="Highlight">
+<div id="highlight" class="flex items-center justify-center" phx-hook="Highlight">
     <pre>
-        <code class="language-elixir">
+        <code class="language-elixir border border-white rounded-lg">
             <%= @gist.markup_text %>
         </code>
     </pre>
