Add syntax highlighting support for multiple languages
Add syntax highlighting support for multiple languages

--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -1,4 +1,4 @@
-<div id="highlight" class="flex items-center justify-center" phx-hook="Highlight">
+<div id="highlight" class="flex items-center justify-center" phx-hook="Highlight" data-name={@gist.name}>
     <pre>
         <code class="language-elixir border border-white rounded-lg">
             <%= @gist.markup_text %>
