--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -40,7 +40,12 @@
                 <img src="/images/edit.svg" alt="Edit Button">
             </button>
             <% end %>
-            <button class="px-1"  type="button" phx-click={}>
+            <button 
+                class="px-1" 
+                type="button" 
+                phx-hook="CopyToClipboard" 
+                clipboard-data={@gist.markup_text}
+            >
                 <img src="/images/copy.svg" alt="Copy Button">
             </button>
         </div>
