Add id attribute and rename data attribute

--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -41,10 +41,11 @@
       </button>
       <% end %>
       <button 
+        id="copy-button"
         class="px-1" 
         type="button" 
         phx-hook="CopyToClipboard" 
-        clipboard-data={@gist.markup_text}
+        clipboard-data-gist={@gist.markup_text}
       >
         <img src="/images/copy.svg" alt="Copy Button">
       </button>
