--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -1,5 +1,6 @@
 <div class="gh-gradient flex flex-col justify-center items-centered p-4">
-  <div class="flex justify-between w-full mb-10 px-4">
+  <!-- <div class="flex justify-between w-full mb-10 px-4"> -->
+  <div class="flex justify-between p-14 space-y-4">
     <div class="flex item-center ml-10">
       <img 
         src="/images/user-image.svg" 
@@ -26,9 +27,10 @@
   </div>
 </div>
 
+
 <div class="justify-center px-28 w-full mb-10">
   <div class="flex p-2 items-center justify-between bg-ghDark rounded-t-md border">
-    <div class="w-[300px] pl-2 font-brand font-bold text-base text-ghLavender-dark">
+    <div class="w-[300px] pl-8 font-brand font-bold text-base text-ghLavender-dark">
       <%= @gist.name %>
     </div>
     <div>
