--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -3,44 +3,4 @@
         Instantly share Elixir code, notes and snippets.
     </h1>
 </div>
-<.form for={@form} phx-submit="create" phx-change="validate">
-  <div class="justify-center px-28 w-full space-y-4 mb-10">
-    <.input 
-      field={@form[:description]} 
-      placeholder="Gist Description..." 
-      autocomplete="off" 
-      phx-debounce="blur"
-    />
-    <div>
-      <div class="flex p-2 items-center bg-ghDark rounded-t-md border">
-        <div class="w-[300px] mb-2">
-          <.input 
-            field={@form[:name]} 
-            placeholder="Filename including extension..." 
-            autocomplete="off" 
-            phx-debounce="blur" 
-        />
-        </div>
-      </div>
-      <div id="gist-wrapper" class="flex w-full" phx-update="ignore">
-        <textarea class="line-numbers rounded-bl-md" id="line-numbers" readonly><%= "1\n" %></textarea>
-        <div class="flex-grow">
-          <.input 
-          type="textarea"
-          field={@form[:markup_text]}
-          id="gist-textarea"
-          phx-hook="UpdateLineNumbers"
-          class="textarea w-full rounded-br-md"
-          placeholder="Insert code..."
-          spellcheck="false"
-          autocomplete="off"
-          phx-debounce="blur"
-          />
-        </div>
-      </div>  
-    </div>
-    <div class="flex justify-end">
-        <.button class="create_button" phx-disable-with="Creating...">Create gist</.button>
-    </div>
-  </div>
-</.form>
+<.live_component module={GistFormComponent} id={:new} current_user={@current_user} />
