Define form attribute of live component

--- a/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/create_gist_live.html.heex
@@ -3,4 +3,8 @@
         Instantly share Elixir code, notes and snippets.
     </h1>
 </div>
-<.live_component module={GistFormComponent} id={:new} current_user={@current_user} />
+<.live_component 
+  module={GistFormComponent}       
+  form={to_form(Gists.change_gist(%Gist{}))}
+  id={:new} current_user={@current_user} 
+/>
