--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -31,6 +31,7 @@
   <.live_component 
     module={GistFormComponent} 
     id={@gist.id}
+    form={to_form(Gists.change_gist(@gist))}
     current_user={@current_user} 
   />
 </div>
