--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -27,53 +27,64 @@
   </div>
 </div>
 
-
-<div class="justify-center px-28 w-full mb-10">
-  <div class="flex p-2 items-center justify-between bg-ghDark rounded-t-md border">
-    <div class="w-[300px] pl-8 font-brand font-bold text-base text-ghLavender-dark">
-      <%= @gist.name %>
+<%= if @show_form do %>
+  <.live_component 
+    module={GistFormComponent} 
+    id={@gist.id}
+    form={to_form(Gists.change_gist(@gist))}
+    current_user={@current_user} 
+  />
+<% else %>
+  <div class="justify-center px-28 w-full mb-10">
+    <div class="flex p-2 items-center justify-between bg-ghDark rounded-t-md border">
+      <div class="w-[300px] pl-8 font-brand font-bold text-base text-ghLavender-dark">
+        <%= @gist.name %>
+      </div>
+      <div>
+        <%= if @current_user.id == @gist.user_id do %>
+        <button 
+          class="px-1 interactive-icon" 
+          type="button" 
+          phx-click="delete" 
+          phx-value-id={@gist.id}
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-5" aria-label="Delete Button">
+              <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <button 
+          id="edit-btn" 
+          class="px-1 interactive-icon" 
+          type="button" 
+          phx-click="toggle_edit" 
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-5" aria-label="Edit Button">
+              <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
+              <path d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
+          </svg>
+        </button>
+        <% end %>
+        <button 
+          id="copy-button"
+          class="px-1 interactive-icon" 
+          type="button" 
+          phx-hook="CopyToClipboard" 
+          clipboard-data-gist={@gist.markup_text}
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-5" aria-label="Copy Button">
+              <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
+              <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
+          </svg>
+        </button>
+      </div>
     </div>
-    <div>
-      <%= if @current_user.id == @gist.user_id do %>
-      <button 
-        class="px-1 interactive-icon" 
-        type="button" 
-        phx-click="delete" 
-        phx-value-id={@gist.id}
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-5" aria-label="Delete Button">
-            <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
-        </svg>
-      </button>
-      <button class="px-1 interactive-icon" type="button" phx-click={}>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-5" aria-label="Edit Button">
-            <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
-            <path d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
-        </svg>
-      </button>
-      <% end %>
-      <button 
-        id="copy-button"
-        class="px-1 interactive-icon" 
-        type="button" 
-        phx-hook="CopyToClipboard" 
-        clipboard-data-gist={@gist.markup_text}
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-5" aria-label="Copy Button">
-            <path d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z" />
-            <path d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z" />
-        </svg>
-      </button>
+    <div id="gist-wrapper" class="flex w-full">
+      <textarea id="syntax-line-numbers" class="syntax-numbers rounded-bl-md" readonly></textarea>
+      <div id="highlight" class="syntax-area w-full rounded-br-md" phx-hook="Highlight" data-name={@gist.name}>
+        <pre><code class="language-elixir">
+          <%= @gist.markup_text %>
+        </code></pre>
+      </div>
     </div>
   </div>
-  <div id="gist-wrapper" class="flex w-full">
-    <textarea id="line-numbers" class="syntax-numbers rounded-bl-md" readonly></textarea>
-    <div id="highlight" class="syntax-area w-full rounded-br-md" phx-hook="Highlight" data-name={@gist.name}>
-      <pre><code class="language-elixir">
-        <%= @gist.markup_text %>
-      </code></pre>
-    </div>
-  </div>
-</div>
-
-
+<% end %>
