--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -14,7 +14,12 @@
           placeholder-ghDark-light text-white text-sm font-brand font-regular " 
         placeholder="Search..."
       />
-      <button class="mt-2 mr-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light">All gists</button>
+      <.link 
+      href={~p"/all"}
+      class="mt-2 mr-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light"
+      >
+      All gists
+      </.link>
     </div>
   </div>
   <div>
