--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -1,3 +1,8 @@
 <div class="gh-gradient flex flex-col justify-center items-center p-4">
     <h1 class="font-brand font-bold text-3xl text-white">All gists</h1>
 </div>
+<div >
+    <%= for gist <- @gists do %>
+    <.gist gist={gist} current_user={@current_user} />
+    <% end %>
+</div>
