Define custom css classes for all gists template

--- a/gist_hub/assets/css/app.css
+++ b/gist_hub/assets/css/app.css
@@ -108,6 +108,32 @@ form input[type="text"]:focus {
     @apply focus:outline-none focus:border-white focus:ring-0;
 }
 
+.all-line-numbers {
+    @apply border border-white font-brand font-regular text-xs text-ghDark-light bg-ghDark-dark h-[300px] w-[54px] text-right overflow-hidden resize-none;
+    border-right: none;
+    border-top: none;
+}
+
+.all-line-numbers:focus {
+    @apply focus:outline-none focus:border-white focus:ring-0
+}
+
+.all-syntax-area {
+    @apply bg-ghSyntax border border-white rounded-tr-md text-xs h-auto overflow-hidden;
+    /* border-top: none; */
+    border-left: none;
+}
+
+.all-syntax-numbers {
+   @apply border border-white rounded-tl-md font-brand py-[12px] text-xs text-ghDark-light bg-ghSyntax h-auto w-[54px] text-right overflow-hidden resize-none;
+   border-right: none;
+   /* border-top: none; */
+}
+
+.all-syntax-numbers:focus {
+    @apply focus:outline-none focus:border-white focus:ring-0;
+}
+
 .create_button {
     @apply bg-ghPurple border border-white font-brand font-regular text-black text-base;
 }
