--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -1,5 +1,18 @@
-<div class="gh-gradient flex flex-col justify-center items-center p-4">
-    <h1 class="font-brand font-bold text-3xl text-white">All gists</h1>
+<div class="gh-gradient flex items-center ">
+    <div class="flex justify-between w-full px-20">
+            <h1 class="font-brand font-bold text-3xl text-white">All gists</h1>
+            <div class="bg-transparent border rounded-md flex items-center">
+                <span class="font-brand text-ghDark-light text-sm mr-2 ml-2">
+                    Sort:
+                </span>
+                <span class="font-brand text-white text-sm mr-2">
+                    Recently updated
+                </span> 
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3.0" stroke="white" class="size-3 mr-2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                </svg>
+            </div>
+    </div>
 </div>
 <div >
     <%= for gist <- @gists do %>
