Change text colour of identifiers on hover

--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -1,9 +1,9 @@
 <div class="gh-gradient flex">
     <div class="flex justify-between w-full px-20 mt-4">
         <span class="flex py-2">
-            <h1 class="font-brand text-m underline text-white mr-2">All gists </h1>
+            <h1><span class="font-brand text-m underline text-white mr-2 hover:text-ghLavender">All gists</span></h1>
             <span class="font-brand text-m text-white mr-2">|</span>
-            <h1 class="font-brand text-m text-ghDark-light"> Your gists</h1>
+            <h1><span class="font-brand text-m text-ghDark-light hover:text-ghLavender">Your gists</span></h1>
         </span>
             <div class="flex flex-col w-52">
                 <div 
