--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -9,7 +9,7 @@
       />
       <div class="flex flex-col ml-2">
         <div class="font-brand font-bold text-base text-ghLavender-dark">
-          <%= @current_user.email %> <span class="text-white">/</span> <%= @gist.name%>
+          <%= FormatUsername.strip_name_from_email(@gist.user.email) %> <span class="text-white">/</span> <%= @gist.name%>
         </div>
         <div class="text-lg text-white font-brand font-bold">Last updated <%= @gist.relative %></div>
         <p class="text-left text-white text-sm font-brand"><%= @gist.description %></p>
