--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -60,7 +60,7 @@
 
 </div>
 <div >
-    <%= for gist <- @gists do %>
-    <.gist gist={gist} current_user={@current_user} />
+    <%= for {gist, index} <- Enum.with_index(@gists) do %>
+    <.gist gist={gist} index={index} current_user={@current_user} />
     <% end %>
 </div>
