Define fallback colors for text and background of codeBlock i.e. before syntax highlight renders

--- a/gist_hub/assets/css/app.css
+++ b/gist_hub/assets/css/app.css
@@ -156,3 +156,9 @@ input:-webkit-autofill {
     -webkit-text-fill-color: white !important;
     transition: background-color 5000s ease-in-out 0s;
 }
+
+/* fallback text color and background */
+pre code {
+    @apply text-ghDark-light whitespace-pre
+}
+  
