Remove unnecessary reference to module

--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -24,7 +24,7 @@
                 <div 
                     id="sort_dropdown_menu" 
                     class="mt w-full border font-brand text-white bg-ghDark rounded-md"
-                    phx-click-away={GistHubWeb.AllGistsLive.toggle_sort_dropdown_menu()}
+                    phx-click-away={toggle_sort_dropdown_menu()}
                     hidden="true"
                     >
                     <.link 
