--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -65,6 +65,6 @@
 </div>
 <div >
   <%= for {gist, index} <- Enum.with_index(@gists) do %>
-  <.gist gist={gist} index={index} current_user={@current_user} />
+  <.gist gist={gist} index={index} current_user={@current_user} sort_by_updated_at={@sort_by_updated_at}/>
   <% end %>
 </div>
