align site header logo and branding elements to center

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -1,12 +1,12 @@
-<header class="flex justify-between items-center px-6 py-3 bg-ghDark">
-  <div class="flex relative">
-    <a href={~p"/"}>
+<header class="flex justify-between items-center space-x-2 py-2 bg-ghDark">
+  <div class="flex relative items-center">
+    <a href={~p"/"} class="py-2 ml-2">
       <img src="/images/gist-logo.svg" alt="Logo" class="h-8 w-auto">
     </a>
     <a href={~p"/"} class="mr-6">
       <div class="text-white font-brand font-bold text-3xl">GistHub</div>
     </a>
-    <div>
+    <div class="py-2">
       <input 
         type="text" 
         class="rounded-lg bg-ghDark-dark border-white px-3 py-1 mr-5
