--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -6,17 +6,29 @@
     <a href={~p"/"} class="mr-6">
       <div class="text-white font-brand font-bold text-3xl">GistHub</div>
     </a>
-    <div class="py-2">
-      <input 
-        type="text" 
-        class="rounded-lg bg-ghDark-dark border-white px-3 py-1 mr-5
-          focus:outline-none focus:border-ghLavender focus:ring-0 
-          placeholder-ghDark-light text-white text-sm font-brand font-regular " 
-        placeholder="Search..."
-      />
+    <div class="flex py-2 items-center">
+      <div class="flex mr-2">
+        <input 
+          type="text" 
+          class="rounded-l-lg bg-ghDark-dark border-white py-1
+            focus:outline-none focus:border-ghLavender focus:ring-0 
+            placeholder-ghDark-light text-white text-sm font-brand font-regular " 
+          placeholder="Search..."
+        />
+        <button
+          class="rounded-r-lg bg-ghDark-dark border-r border-b border-t border-white px-2
+            focus:outline-none focus:border-ghLavender focus:ring-0
+          "
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="gray" class="size-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+          </svg>        
+        </button>
+      </div>
+
       <.link 
       href={~p"/all"}
-      class="mt-2 mr-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light"
+      class="ml-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light"
       >
       All gists
       </.link>
