Document searchbar live component
Correct end of doc

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -7,12 +7,14 @@
       <div class="text-white font-brand font-bold text-3xl">GistHub</div>
     </a>
     <div class="flex py-2 items-center">
+      <!-- search bar -->
       <.live_component
         module={GistHubWeb.SearchBarComponent}
         form={to_form(%{"search_term" => ""})}
         id={ @current_user && @current_user.id || :new}
         current_user={@current_user}
       />
+      <!---->
       <.link 
       href={~p"/all"}
       class="ml-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light"
