--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -8,12 +8,14 @@
     </a>
     <div class="flex py-2 items-center">
       <!-- search bar -->
-      <.live_component
-        module={GistHubWeb.SearchBarComponent}
-        form={to_form(%{"search_term" => ""})}
-        id={ @current_user && @current_user.id || :new}
-        current_user={@current_user}
-      />
+      <%!-- <%= unless @page_title == "Search" do%> --%>
+        <.live_component
+          module={GistHubWeb.SearchBarComponent}
+          form={to_form(%{"search_term" => ""})}
+          id={ @current_user && @current_user.id || :new}
+          current_user={@current_user}
+        />
+      <%!-- <% end %> --%>
       <!---->
       <.link 
       href={~p"/all"}
