--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -58,13 +58,9 @@
         </div>
       </div>
   </div>
-  <div class="flex right">
-
-  </div>
-
 </div>
 <div >
   <%= for {gist, index} <- Enum.with_index(@gists) do %>
-  <.gist gist={gist} index={index} current_user={@current_user} sort_by_updated_at={@sort_by_updated_at}/>
+    <.gist gist_path={~p"/gist/?id=#{gist.id}"} gist={gist} index={index} current_user={@current_user} sort_by_updated_at={@sort_by_updated_at}/>
   <% end %>
 </div>
