--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -61,6 +61,14 @@
 </div>
 <div >
   <%= for {gist, index} <- Enum.with_index(@gists) do %>
-    <.gist gist_path={~p"/gist/?id=#{gist.id}"} gist={gist} index={index} current_user={@current_user} sort_by_updated_at={@sort_by_updated_at}/>
+    <.gist
+        gist_path={~p"/gist?id=#{gist.id}"}
+        user_path={~p"/#{FormatUsername.strip_name_from_email(gist.user.email)}"}
+        username={FormatUsername.strip_name_from_email(gist.user.email)}
+        gist={gist}
+        index={index}
+        current_user={@current_user}
+        sort_by_updated_at={@sort_by_updated_at}
+    />
   <% end %>
 </div>
