--- a/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/all_gists_live.html.heex
@@ -11,7 +11,6 @@
           Your gists
         </.link>
       </h1>
-      
     </span>
       <div class="flex flex-col w-54">
         <div 
@@ -69,10 +68,11 @@
 </div>
 <div >
   <%= for {gist, index} <- Enum.with_index(@gists) do %>
+    <% username = FormatUsername.strip_name_from_email(gist.user.email) %>
     <.gist
-        gist_path={~p"/gist?id=#{gist.id}"}
-        user_path={~p"/#{FormatUsername.strip_name_from_email(gist.user.email)}"}
-        username={FormatUsername.strip_name_from_email(gist.user.email)}
+        gist_path={~p"/#{username}/#{gist.id}"}
+        user_path={~p"/#{username}"}
+        username={username}
         gist={gist}
         index={index}
         current_user={@current_user}
