--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -27,87 +27,92 @@
       href={~p"/chika"}
       class="ml-2 text-white text-[1rem] font-brand font-bold hover:text-ghDark-light"
       >
-        Users
+        :chika
       </.link>
     </div>
   </div>
   <div>
     <div class="relative mr-4">
-      <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={GistHubWeb.Layouts.App.toggle_dropdown_menu()}>
-        <%!-- <img src="/images/profile_gist2.jpg" alt="Profile Image" class="round-image-padding w-8 h-8"> --%>
-        <img src="/images/user-image.svg" alt="Profile Image" class="round-image-padding w-8 h-8">
-
+      <button 
+        class="img-down-arrow" 
+        type="button" 
+        id="user-menu-button" 
+        phx-click={GistHubWeb.Layouts.App.toggle_dropdown_menu()}>
+        <img src="/images/profile_gist2.jpg" alt="Profile Image" class="round-image-padding w-8 h-8">
+        <%!-- <img src="/images/user-image.svg" alt="Profile Image" class="round-image-padding w-8 h-8"> --%>
       </button>
       <div 
         id="dropdown_menu"
         phx-click-away={GistHubWeb.Layouts.App.toggle_dropdown_menu()}
-        class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-48 bg-ghDark rounded-lg shadow-xl border border-white"
+        class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-56 bg-ghDark rounded-lg shadow-xl border border-white"
         hidden="true"
-        >
+      >
         <%= if @current_user do %>  
           <.link 
-          href={~p"/users/settings"}
-          class="menu-item border-b border-white border-opacity-50"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-0"
+            href={~p"/users/settings"}
+            class="menu-item border-b border-white border-opacity-50"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-0"
+            phx-hook="TruncateEmailUsername"
           >
-          Signed in as <%= @current_user.email %>
+            Signed in as <span id="user-email" title={@current_user.email}><%= @current_user.email %></span>
           </.link>
           <.link 
-          href=""
-          class="menu-item"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-1"
+            href=""
+            class="menu-item"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-1"
           >
           Your gists
           </.link>
           <.link 
-          href=""
-          class="menu-item  border-b border-white border-opacity-50"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-2"
+            href=""
+            class="menu-item  border-b border-white border-opacity-50"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-2"
           >
           Saved gists
           </.link>
           <.link 
-          href={~p"/users/log_out"}
-          class="menu-item"
-          role="menuitem"
-          tabindex="-1"
-          method="delete"
-          id="user-menu-item-3"
+            href={~p"/users/log_out"}
+            class="menu-item"
+            role="menuitem"
+            tabindex="-1"
+            method="delete"
+            id="user-menu-item-3"
           >
           Sign out
           </.link>
         <% else %> 
           <.link 
-          href={~p"/users/log_in"}
-          class="menu-item border-b border-white border-opacity-50"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-0"
+            href={~p"/users/log_in"}
+            class="menu-item border-b border-white border-opacity-50"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-0"
           >
           Sign in
           </.link>
           <.link 
-          href={~p"/users/register"}
-          class="menu-item"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-1"
+            href={~p"/users/register"}
+            class="menu-item"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-1"
           >
           Register
           </.link>
         <% end %> 
       </div>
+
     </div>
   </div>
 </header>
